# potato

./: .gitignore  ArgVSplit.h  Board.cpp  Board.h  CMakeLists.txt  Command.cpp  Command.h  Eval.cpp  GLUtil.cpp  GLUtil.h  Main.cpp  Move.cpp  Move.h  MoveTest.cpp  Position.cpp  Position.h  README.md  State.cpp  Tables.h  Taster.py  Tests.cpp  UCI.cpp  UCI.h  Util.cpp  Util.h  View.cpp  View.h  Zobrist.cpp  build.sh  fshader.glsl  genTables.py  genTexture.py  launch.json  launch.json.example  taster.py  vcpkg.json  vshader.glsl
tests/: Moves.cpp
